--- a/OnlineGame/pom.xml
+++ b/OnlineGame/pom.xml
@@ -10,7 +10,7 @@
 		<relativePath /> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>matej.jamb</groupId>
-	<artifactId>OnlineGame</artifactId>
+	<artifactId>jamb-remote</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>OnlineGame</name>
 	<description>Demo project for Spring Boot</description>
@@ -54,6 +54,19 @@
 					<artifactId>junit-vintage-engine</artifactId>
 				</exclusion>
 			</exclusions>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.httpcomponents</groupId>
+			<artifactId>httpclient</artifactId>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-context-support</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-cache</artifactId>
 		</dependency>
 	</dependencies>
 
